--- a/files/assets/css/main.scss
+++ b/files/assets/css/main.scss
@@ -19,8 +19,19 @@ h1,h2{
   font-weight: 500;
 }
 
+h2 {
+  line-height: 1.5;
+}
+
 h3{
   font-weight: 400;
+  margin-bottom: .5rem;
+  font-size: 24px;
+  line-height: 1.25;
+}
+
+p + h3 {
+  margin-top: 2rem;
 }
 
 h4{
@@ -38,9 +49,20 @@ h1, h2{
   font-size: 2.25rem;
 }
 
+p {
+  line-height: 1.25;
+}
+
+p,ul,ol {
+  margin-top: 0;
+}
 
 b, strong{
   font-weight: 600;
+}
+
+ul:last-child {
+  margin-bottom: 0;
 }
 
 ul, li{
